# rustpass

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.devcontainer/: Dockerfile
.github/workflows/: pages.yml
benches/: large-vaults.rs
src/: lib.rs  main.rs
