[package]
name = "rustpass"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] } # CLI
serde = { version = "1.0", features = [
    "derive",
] } # (de)serialization of vault file
aes-gcm = "0.10.1" # encryption
argon2 = "0.4.1" # encryption
rand_core = { version = "0.6", features = ["std"] } # encryption
sha2 = "0.10.2" # encryption
ciborium = "0.2.0" # CBOR (de)serialization
chrono = { version = "0.4", features = ["serde"] }
